--- a/css/mediaQ.css
+++ b/css/mediaQ.css
@@ -24,6 +24,7 @@
         opacity: .5;
     } 
     .sidebar .logo{
+        margin-top:10px; 
         width: 20%;
         height: 70%;
     }
@@ -66,17 +67,6 @@
         bottom: 3%;
         left: 50%;
         transform: translate(-50%,0);
-        animation: jumpy 1s infinite cubic-bezier(0.165, 0.84, 0.44, 1)
-    }
-    @keyframes jumpy {
-        0%{
-            bottom: 1%;
-            opacity: .5;
-            
-        }
-        100%{
-            bottom: 3%
-        }
         
     }
     .service_slider .slide_item h1{
@@ -309,6 +299,34 @@
         text-align: center;
         width: 100%;
     }
+
+    @-webkit-keyframes fadeInUpSliderHead {
+        from {
+          opacity: 0;
+          -webkit-transform: translate(0,0) translate3d(0, 100%, 0);
+          transform: translate(0,0)  translate3d(0, 100%, 0);
+        }
+      
+        to {
+          opacity: 1;
+          -webkit-transform:translate(0,0)  translate3d(0, 0, 0);
+          transform: translate(0,0)  translate3d(0, 0, 0);
+        }
+      }
+      
+      @keyframes fadeInUpSliderHead {
+        from {
+          opacity: 0;
+          -webkit-transform: translate(0,0) translate3d(0, 100%, 0);
+          transform: translate(0,0)  translate3d(0, 100%, 0);
+        }
+      
+        to {
+          opacity: 1;
+          -webkit-transform:translate(0,0)  translate3d(0, 0, 0);
+          transform: translate(0,0)  translate3d(0, 0, 0);
+        }
+      }
 
 }
 
